# isotec-api-backend

./: README.md  pyproject.toml
api/: main.py
api/controllers/: auth.py  users.py
api/data/: app.db
api/exceptions/: custom_exceptions.py
api/models/: user.py
api/repositories/: database.py  users.py
api/routers/: auth.py  users.py
api/utils/: logger.py
